<resources>
    <string name="app_name">NavApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
    <string name="game_view_content_description">Game view</string>
    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="mad_libs">Mad Libs</string>
    <string name="sci_fi_names">Sci-Fi Names</string>
    <string name="guess_the_number">Guess The Number</string>
    <string name="home">Home</string>
    <string name="credits">Credits</string>
    <string name="how_to_play">How To Play</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="navapp">NavApp</string>
    <string name="homeTitle">NavApp</string>
    <string name="navTitle">NavApp</string>
    <string name="directions">Using the side bar, you can access a multitude of different pages. Including this page, the credits, the instructions page, a Mad Lib Generator, a Sci-Fi Name Generator, and a Guess the Number.</string>
    <string name="welcome">Welcome to NavApp, where you can use the navigation menu located in the top right of the screen to navigate the app!</string>
    <string name="guessNumTitle">Guess The Number!!!</string>
    <string name="guessNumHint">1-100</string>
    <string name="guessNumDirections">Enter a number 1-100...</string>
    <string name="highLowGuess">N/A</string>
    <string name="highLowLabel">Higher/Lower</string>
    <string name="livesLeft">10</string>
    <string name="livesTitle">Lives:</string>
    <string name="points">0</string>
    <string name="pointsTitle">Points:</string>
    <string name="buttonTXT">Check?</string>
</resources>