<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_menu_camera"
            android:title="@string/home" />
        <item
            android:id="@+id/howToPlay"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/credits" />
        <item
            android:id="@+id/credits"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/how_to_play" />
        <item
            android:id="@+id/madLibGen"
            android:title="@string/mad_libs" />
        <item
            android:id="@+id/sciFiGen"
            android:title="@string/sci_fi_names" />
        <item
            android:id="@+id/guessTheNum"
            android:title="@string/guess_the_number" />
    </group>
</menu>