<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".guessTheNum">

    <TextView
        android:id="@+id/titleGuessNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="25dp"
        android:text="@string/guessNumTitle"
        android:textSize="40sp"
        app:layout_constraintBottom_toTopOf="@+id/directionsTitle"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/enterNum"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginStart="55dp"
        android:layout_marginEnd="55dp"
        android:layout_marginBottom="48dp"
        android:ems="10"
        android:hint="@string/guessNumHint"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/linearLayout2"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/directionsTitle" />

    <TextView
        android:id="@+id/directionsTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="52dp"
        android:text="@string/guessNumDirections"
        android:textSize="20sp"
        app:layout_constraintBottom_toTopOf="@+id/enterNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/titleGuessNum" />

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="0dp"
        android:layout_marginBottom="21dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toTopOf="@+id/checkNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/enterNum">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/pointsTitle"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/pointsTitle"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/points"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/points"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/livesTitle"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/livesTitle"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/lives"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="20"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/highLowTitle"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/highLowLabel"
                android:textAlignment="center"
                android:textSize="20sp" />

            <TextView
                android:id="@+id/highLow"
                android:layout_width="75sp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/highLowGuess"
                android:textAlignment="center"
                android:textSize="20sp" />
        </LinearLayout>

    </LinearLayout>

    <Button
        android:id="@+id/checkNum"
        android:layout_width="200sp"
        android:layout_height="0dp"
        android:layout_marginBottom="80dp"
        android:text="@string/buttonTXT"
        app:layout_constraintBottom_toTopOf="@+id/generateNum"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2" />

    <Button
        android:id="@+id/generateNum"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="45dp"
        android:text="Generate\n(resets score and lives)"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/checkNum" />

</androidx.constraintlayout.widget.ConstraintLayout>

