<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#B8D8D8"
    tools:context=".ui.home.HomeFragment">


    <TextView
        android:id="@+id/welcome"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:text="@string/welcome"
        android:textAlignment="center"
        android:textColor="#4F6367"
        android:textSize="20sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="196dp" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/navTitle"
        android:textAlignment="center"
        android:textColor="#4F6367"
        android:textSize="40sp"
        tools:layout_editor_absoluteX="135dp"
        tools:layout_editor_absoluteY="32dp" />

    <TextView
        android:id="@+id/directions"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:paddingHorizontal="1dp"
        android:text="@string/directions"
        android:textAlignment="center"
        android:textSize="17sp"
        tools:layout_editor_absoluteX="5dp"
        tools:layout_editor_absoluteY="338dp" />

</androidx.constraintlayout.widget.ConstraintLayout>